# TirtaIYREF

./: package.json
.husky/: pre-commit  pre-push
tirta-main/: .env.example  .gitignore  next.config.ts  package-lock.json  package.json  prisma.config.ts
tirta-main/prisma/: schema.prisma
tirta-main/prisma/migrations/20260504010236_tirta1/: migration.sql
tirta-main/public/: manifest.json  sw.js
tirta-main/src/app/: globals.css  layout-client.tsx  layout.tsx  pwa-provider.tsx
tirta-main/src/app/api/history/reports/: route.ts
tirta-main/src/app/api/home/reports/: route.ts
tirta-main/src/app/api/report/add/: route.ts
tirta-main/src/app/auth/login/: page.tsx
tirta-main/src/app/history/: page.tsx
tirta-main/src/app/home/: page.tsx
tirta-main/src/app/map/: page.tsx
tirta-main/src/app/map/components/: map-actions.tsx  map-bottom-sheets.tsx  map-legend.tsx  zone-risk-badge.tsx
tirta-main/src/app/report/add/: page.tsx
tirta-main/src/components/: app-bottom-nav.tsx
tirta-main/src/components/card/: report-card-overlay.tsx  report-card-row.tsx
tirta-main/src/components/search/: search-filter.tsx
tirta-main/src/components/skeleton/: report-card-skeleton.tsx
tirta-main/src/components/ui/: button.tsx
tirta-main/src/lib/: prisma.ts
tirta-models/: .env.example  pyproject.toml  requirements.txt
tirta-models/flood_history/src/: data_preparation.py  flood_history_clean.ipynb  geospatial_clustering.py  main.py  models.py  visualization.py
tirta-models/grounded_sam/: generate_notebook.py
tirta-models/src/: main.py
tirta-models/src/api/: routes.py
(+4 files in other folders)
